# OpenSourceDataCentre

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
crates/osdc-adapters/: Cargo.toml
crates/osdc-calc/: Cargo.toml
crates/osdc-edge/: Cargo.toml  README.md
crates/osdc-edge-config/: Cargo.toml
crates/osdc-edge-policy/: Cargo.toml
crates/osdc-models/: Cargo.toml
crates/osdc-portal/: Cargo.toml  README.md
crates/osdcctl/: Cargo.toml
data/ai-ready/: README.md  high-density-rack-classes.csv
data/bom/: README.md  bom-250kw-open-regional.csv  component-catalog.csv
data/commercial/: README.md  access-roles.csv  audit-evidence.csv  billing-plans.csv  colocation-products.csv  commercial-gap-register.csv  cross-connect-products.csv  customer-accounts.csv  customer-sites.csv  invoice-preview.csv  remote-hands-pricebook.csv  remote-hands-products.csv  sla-classes.csv  standards-control-matrix.csv  usage-meters.csv
data/commissioning/: README.md  commissioning-evidence-register.csv
data/costing/: README.md  marketplace-price-basis-2026.csv  scenario-category-costs-2026.csv  scenario-costs-2026.csv
data/country-profiles/: README.md  egypt-example.json  iraq-example.json  jordan-example.json  kenya-example.json  pakistan-example.json
data/delivery/: README.md  action-tracker.csv  authority-permits.csv  project-gates.csv  risk-register.csv
data/engineering/: README.md  engineering-evidence-register.csv
docs/assets/: README.md
examples/: site-profile.json
scripts/: adapter-proof.sh  assurance-run.sh  upgrade-with-assurance.sh  verify.sh
(+354 files in other folders)
