[workspace]
members = [
    "crates/osdc-calc",
    "crates/osdc-models",
    "crates/osdc-portal",
    "crates/osdcctl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
