[workspace]
members = [
    "crates/osdc-adapters",
    "crates/osdc-calc",
    "crates/osdc-edge-config",
    "crates/osdc-edge-policy",
    "crates/osdc-edge",
    "crates/osdc-models",
    "crates/osdc-portal",
    "crates/osdcctl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
